@@ -16,6 +16,7 @@ thou	you	PRP
 thy	you	PRP
 wast	be	VBD
 writ	write	VBN
+spake	speak	VBD
 #contractions
 couldn	can	MD
 doesn	do	VBZ
