@@ -18,6 +18,7 @@
  */
 package org.languagetool.rules.en;
 
+import org.junit.BeforeClass;
 import org.junit.Test;
 import org.languagetool.JLanguageTool;
 import org.languagetool.TestTools;
@@ -26,17 +27,25 @@ import org.languagetool.rules.RuleMatch;
 
 import java.io.IOException;
 
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 
 public class MorfologikAmericanSpellerRuleTest {
 
+  private static final AmericanEnglish language = new AmericanEnglish();
+  
+  private static MorfologikAmericanSpellerRule rule;
+  private static JLanguageTool langTool;
+
+  @BeforeClass
+  public static void setup() throws IOException {
+    rule = new MorfologikAmericanSpellerRule(TestTools.getMessages("English"), language);
+    langTool = new JLanguageTool(language);
+  }
+
   @Test
   public void testMorfologikSpeller() throws IOException {
-    final AmericanEnglish language = new AmericanEnglish();
-    final MorfologikAmericanSpellerRule rule =
-            new MorfologikAmericanSpellerRule (TestTools.getMessages("English"), language);
-
-    final JLanguageTool langTool = new JLanguageTool(language);
 
     // correct sentences:
     assertEquals(0, rule.match(langTool.getAnalyzedSentence("This is an example: we get behavior as a dictionary word.")).length);
@@ -77,4 +86,47 @@ public class MorfologikAmericanSpellerRuleTest {
     assertEquals(1, rule.match(langTool.getAnalyzedSentence("A web-feature-drivenx-car software.")).length);
   }
 
+  @Test
+  public void testSuggestionForIrregularWords() throws IOException {
+    // verbs:
+    assertSuggestion("He teached us.", "taught");
+    assertSuggestion("He buyed the wrong brand", "bought");
+    assertSuggestion("I thinked so.", "thought");
+    assertSuggestion("She awaked", "awoke");
+    assertSuggestion("She becomed", "became");
+    assertSuggestion("It begined", "began");
+    assertSuggestion("It bited", "bit");
+    assertSuggestion("She dealed", "dealt");
+    assertSuggestion("She drived", "drove");
+    assertSuggestion("He drawed", "drew");
+    assertSuggestion("She finded", "found");
+    assertSuggestion("It hurted", "hurt");
+    assertSuggestion("It was keeped", "kept");
+    assertSuggestion("He maked", "made");
+    assertSuggestion("She runed", "ran");
+    assertSuggestion("She selled", "sold");
+    
+    //assertSuggestion("He speaked", "spoke");  // needs dict update to not include 'spake'
+
+    // double consonants not yet supported:
+    //assertSuggestion("He cutted", "cut");
+    //assertSuggestion("She runned", "ran");
+
+    // nouns:
+    assertSuggestion("auditory stimuluses", "stimuli");
+    assertSuggestion("analysises", "analyses");
+    assertSuggestion("parenthesises", "parentheses");
+    assertSuggestion("childs", "children");
+    assertSuggestion("womans", "women");
+    assertSuggestion("criterions", "criteria");
+    //accepted by spell checker, e.g. as third-person verb:
+    // foots, mouses, man
+  }
+
+  private void assertSuggestion(String input, String expectedSuggestion) throws IOException {
+    RuleMatch[] matches = rule.match(langTool.getAnalyzedSentence(input));
+    assertThat(matches.length, is(1));
+    assertThat("Expected 1, got: " + matches[0].getSuggestedReplacements(), matches[0].getSuggestedReplacements().size(), is(1));
+    assertThat(matches[0].getSuggestedReplacements().get(0), is(expectedSuggestion));
+  }
 }
